<resources>
    <string name="app_name">ConsomeWSREST</string>
    <string name="action_settings">Settings</string>
    <string name="host_address">http://10.0.2.2</string>
    <string name="host_port">:9090</string>
    <string name="endpoint_base">/livros</string>
    <string name="endpoint_listar">/lista</string>
    <string name="endpoint_salvar">/salvar</string>
    <string name="endpoint_buscar_por_id">/%d</string>
    <string name="add_toolbar">Adicione um Livro</string>
    <string name="salva_livro_button">Salvar Livro</string>
    <string name="tituloEditText">Título</string>
    <string name="autorEditText">Autor</string>
    <string name="paginasEditText">Número de páginas</string>
    <string name="edicaoEditText">Edição</string>
</resources>
